--- a/index.html
+++ b/index.html
@@ -647,12 +647,19 @@
 
                 <!-- Column Third -->
                 <div class="col-lg-3 col-md-6">
-                    <h3 class="footer-heading">Get In Touch</h3>
+                    <h3 class="footer-heading">فروعنا</h3>
                     <div class="footer-widget-contact">
                         <div class="media mb-3">
                             <i class="icofont-google-map me-3"></i>
-                            <div class="media-body">Envato Pty Ltd, 13/2 Elizabeth
-                                St Melbourne VIC 3000, Australia</div>
+                            <div class="media-body">المكز الرئيسي - الدمام -   خلف محطة الهندي </div>
+                        </div>
+                        <div class="media mb-3">
+                            <i class="icofont-google-map me-3"></i>
+                            <div class="media-body">جدة - غليل - جوار ساوث مول </div>
+                        </div>
+                        <div class="media mb-3">
+                            <i class="icofont-google-map me-3"></i>
+                            <div class="media-body">الرياض - شارع اسطنبول </div>
                         </div>
                         <div class="media mb-3">
                             <i class="icofont-smart-phone me-3"></i>
