--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             </a>
                             <div class="dropdown-menu dropdownhover-bottom dropdown-menu-end" role="menu">
                                 <a class="dropdown-item active" href="#">عربي</a>
-                                <a class="dropdown-item" href="index-en.html">English</a>
+                                <a class="dropdown-item" href="#">English</a>
                             </div>
                         </div>
                         <!-- Topbar Language Dropdown End -->
@@ -100,19 +100,19 @@
                                     class="icofont-rounded"></i></a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link" href="#" aria-expanded="false"> من نحن<i
+                            <a class="nav-link scrollto" href="#whous" aria-expanded="false"> من نحن<i
                                     class="icofont-rounded"></i></a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link" href="#" aria-expanded="false">لماذا الجيد <i
+                            <a class="nav-link" href="#whyaljeed" aria-expanded="false">لماذا الجيد <i
                                     class="icofont-rounded"></i></a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link" href="#" aria-expanded="false"> خدماتنا <i
+                            <a class="nav-link" href="#ourservice" aria-expanded="false"> خدماتنا <i
                                     class="icofont-rounded"></i></a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link" href="#" aria-expanded="false">تواصل معنا <i
+                            <a class="nav-link" href="#contact" aria-expanded="false">تواصل معنا <i
                                     class="icofont-rounded"></i></a>
                         </li>
 
@@ -126,7 +126,7 @@
 
     <!-- Page Breadcrumbs Start -->
     <div class="slider bg-navy-blue bg-fixed pos-rel breadcrumbs-page">
-        <div class="container">
+        <div class="container title-slider">
 
 
             <h1>مؤسسة الجيد للنقليات </h1>
@@ -142,7 +142,7 @@
     <main id="body-content">
 
         <!-- What Makes Us Special Start -->
-        <section class="wide-tb-80">
+        <section id="whous" class="wide-tb-80">
             <div class="container pos-rel">
                 <div class="row align-items-center">
 
@@ -171,7 +171,7 @@
         <!-- What Makes Us Special End -->
 
         <!-- What Makes Us Special Start -->
-        <section class="bg-light-gray wide-tb-100 pb-5 why-choose">
+        <section id="ourservice" class="bg-light-gray wide-tb-100 pb-5 why-choose">
             <div class="container pos-rel">
                 <div class="row">
                     <!-- Heading Main -->
@@ -324,11 +324,11 @@
         <!-- Counter End -->
 
         <!-- Tracking Your Freight Start -->
-        <section class="pos-rel bg-light-theme">
+        <section id="whyaljeed" class="pos-rel bg-light-theme">
             <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="col-lg-5 col-12 p-0">
-                        <img src="assets/images/aljeed-3.webp" class="w-100" alt="">
+                        <img src="assets/images/bg_2.jpg" class="w-100" alt="">
                     </div>
                     <div class="col-lg-6 col-12">
 
@@ -499,7 +499,7 @@
         <!-- Frequently Asked Questions End -->
 
         <!-- Callout Start -->
-        <section class="wide-tb-80 bg-scroll bg-img-6 pos-rel callout-style-1">
+        <section id="contact" class="wide-tb-80 bg-scroll bg-img-6 pos-rel callout-style-1">
             <div class="bg-overlay blue opacity-60"></div>
             <div class="container">
                 <div class="row align-items-center">
@@ -535,9 +535,8 @@
 
             <div class="row">
                 <!-- Right Text Start -->
-                <div class="col-lg-4 wow fadeInRight" data-wow-duration="0" data-wow-delay="0.2s">
+                <div class="col-lg-4 wow fadeInRight " data-wow-duration="0" data-wow-delay="0.2s">
                     <div class="align-self-stretch h-100 align-items-center d-flex bg-with-text">
-                        سواء كنت تحتاج إلى توزيع أو تنفيذ أو شحن محدد أو حل كامل لسلسلة التوريد ، فنحن هنا من أجلك.
                     </div>
                 </div>
                 <!-- Right Text Start -->
@@ -626,26 +625,7 @@
                         <a href="#"><i class="icofont-google-plus"></i></a>
                     </div>
                 </div>
-                <!-- Column First -->
-
-                <!-- Column Second -->
-                <div class="col-lg-3 col-md-6">
-                    <h3 class="footer-heading">تنقل سريع</h3>
-                    <div class="footer-widget-menu">
-                        <ul class="list-unstyled">
-                            <li><a href="#"><i class="icofont-simple-left"></i> <span>الرئيسية</span></a></li>
-                            <li><a href="#"><i class="icofont-simple-left"></i> <span>نبذة</span></a></li>
-                            <li><a href="#"><i class="icofont-simple-left"></i> <span> لماذا نحن </span></a></li>
-                            <li><a href="#"><i class="icofont-simple-left"></i> <span>خدماتنا</span></a></li>
-                            <li><a href="#"><i class="icofont-simple-left"></i> <span>علائنا</span></a></li>
-                            <li><a href="#"><i class="icofont-simple-left"></i> <span>اسئلة شائعة</span></a></li>
-                            <li><a href="#"><i class="icofont-simple-left"></i> <span>تواصل معنا </span></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- Column Second -->
-
-                <!-- Column Third -->
+            
                 <div class="col-lg-3 col-md-6">
                     <h3 class="footer-heading">فروعنا</h3>
                     <div class="footer-widget-contact">
@@ -664,8 +644,6 @@
                         <div class="media mb-3">
                             <i class="icofont-smart-phone me-3"></i>
                             <div class="media-body">
-                                <!-- <div>+966 (55) 115 - 6677 </div> -->
-                                <!-- <div>+966 (55) 005 - 6677 </div> -->
                                 <div><a href="tel:+966 55 115 6677 ">6677 115 55 966+</a></div>
                                 <div><a href="tel:+966 55 005 6677 ">6677 005 55 966+</a></div>
                             </div>
@@ -688,7 +666,7 @@
                 <!-- Column Third -->
 
                 <!-- Column Fourth -->
-                <div class="col-lg-3 col-md-6">
+                <!-- <div class="col-lg-3 col-md-6">
                     <h3 class="footer-heading">التغريدات الأخيرة</h3>
                     <div class="footer-widget-tweet">
                         <div class="d-flex align-items-start">
@@ -700,7 +678,7 @@
                             <a href="#" class="btn-theme icon-left"><i class="icofont-twitter"></i> Follow @twitter</a>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- Column Fourth -->
 
 
