edit content index

--- a/index.html
+++ b/index.html
@@ -130,10 +130,9 @@
 
 
             <h1>مؤسسة الجيد للنقليات </h1>
-            <div class="breadcrumbs-description">
-                مؤسسةالجيد للنقليات متخصصة في توفير خدمات النقل البري لعملائنا في جميع أنحاء البلاد. نحن نقدم حلولًا
-                شاملة لنقل البضائع والشحنات بأمان وفعالية.
-            </div>
+            <div class="breadcrumbs-description">مؤسسة سعودية تعمل في مجال خدمات النقل البري بين دول مجلس التعاون
+                الخليجي وجميع محافظات المملكة العربية السعودية، نقدم الحلول الشاملة والفعالة لنقل البضائع وسلاسل الإمداد
+                بطريقة احترافية وآمنة.</div>
         </div>
     </div>
     <!-- Page Breadcrumbs End -->
@@ -183,17 +182,18 @@
                     </div>
                     <!-- Heading Main -->
 
+
                     <!-- Icon Box 2 -->
-                    <div class="col-12 col-lg-4 wow fadeInUp" data-wow-duration="0" data-wow-delay="0s">
+                    <div class="col-12 col-lg-3 wow fadeInUp" data-wow-duration="0" data-wow-delay="0s">
                         <div class="icon-box-2">
                             <div class="media">
                                 <div class="service-icon">
                                     <i class="icofont-id"></i>
                                 </div>
                                 <div class="service-inner-content media-body">
-                                    <h4 class="h4-md">كادر ذات خبرة </h4>
-                                    <p>كادرنا مؤهل لتسهيل جميع العقبات امام عملائنا على مدار العام وفي جميع مناطق
-                                        الممكلة وخارج المملكة </p>
+                                    <h4 class="h4-md"> كادر ذو خبرة </h4>
+                                    <p> كادرنا مؤهل وذو خبرة طويلة في مجال النقل البري للوصول إلى أفضل خدمة في أقصر مدة
+                                        زمنية.</p>
                                 </div>
                             </div>
                         </div>
@@ -201,7 +201,7 @@
                     <!-- Icon Box -->
 
                     <!-- Icon Box 2 -->
-                    <div class="col-12 col-lg-4 wow fadeInUp" data-wow-duration="0" data-wow-delay="0.2s">
+                    <div class="col-12 col-lg-3 wow fadeInUp" data-wow-duration="0" data-wow-delay="0.2s">
                         <div class="icon-box-2">
                             <div class="media">
                                 <div class="service-icon">
@@ -209,8 +209,7 @@
                                 </div>
                                 <div class="service-inner-content media-body">
                                     <h4 class="h4-md"> خدمة العملاء </h4>
-                                    <p> توفير دعم للعملاء والاجابة على استفساراتهم على مدار 24 ساعه وطوال ايام الاسبوع
-                                        هو من اولوياتنا امام عملائنا </p>
+                                    <p> وجود خدمة عملاء مسؤولة 24/7 </p>
                                 </div>
                             </div>
                         </div>
@@ -218,17 +217,35 @@
                     <!-- Icon Box -->
 
                     <!-- Icon Box 2 -->
-                    <div class="col-12 col-lg-4 wow fadeInUp" data-wow-duration="0" data-wow-delay="0.4s">
+                    <div class="col-12 col-lg-3 wow fadeInUp" data-wow-duration="0" data-wow-delay="0.4s">
                         <div class="icon-box-2">
                             <div class="media">
                                 <div class="service-icon">
                                     <i class="icofont-history"></i>
                                 </div>
                                 <div class="service-inner-content media-body">
-                                    <h4 class="h4-md">الأمان والسلامة</h4>
+                                    <h4 class="h4-md"> الأمان والسلامة </h4>
                                     <p> نحن نولي أهمية قصوى للأمان والسلامة في جميع عمليات النقل لدينا، حيث نتبع
-                                        الممارسات الأمنية الصارمة لمتابعة عمليات الشحن ولضمان وصول الشحنة في وقت قياسي
-                                        ومحدد</p>
+                                        الممارسات الأمنية لمتابعة عمليات الشحن ولضمان وصول الشحنة في وقت قياسي ومحدد
+                                        وبطريقة آمنة.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Icon Box -->
+
+                    <!-- Icon Box 2 -->
+                    <div class="col-12 col-lg-3 wow fadeInUp" data-wow-duration="0" data-wow-delay="0.6s">
+                        <div class="icon-box-2">
+                            <div class="media">
+                                <div class="service-icon">
+                                    <i class="icofont-id"></i>
+                                </div>
+                                <div class="service-inner-content media-body">
+                                    <h4 class="h4-md"> تغطية جميع المتطلبات </h4>
+                                    <p> تنوع الأسطول بجميع أحجام الشاحنات ومختلف أنواعها تجميد وتبريد وجاف ومواد شديدة
+                                        الحساسية
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -268,9 +285,9 @@
                     <div class="col col-12 col-lg-3 col-sm-6 wow slideInUp" data-wow-duration="0" data-wow-delay="0s">
                         <div class="counter-style-1 light-bg">
                             <p class="mb-1"><i class="icofont-google-map"></i></p>
-                            <span class="counter">6</span>
+                            <span class="counter">12</span>
                             <div>
-                                فروع حول الممكلة
+                                فرع حول الممكلة
                             </div>
                         </div>
                     </div>
@@ -297,10 +314,10 @@
                     <div class="col col-12 col-lg-3 col-sm-6 wow slideInUp" data-wow-duration="0" data-wow-delay="0.6s">
                         <div class="counter-style-1 light-bg">
                             <p class="mb-1"><i class="icofont-vehicle-delivery-van"></i></p>
-                            <span class="counter">50</span>
+                            <span class="counter">100</span>
                             <span>+</span>
                             <div>
-                                رحلة يومية حول الممكلة
+                                رحلة يومية
                             </div>
                         </div>
                     </div>
@@ -313,7 +330,7 @@
                             <span class="counter">18,000</span>
                             <span>+</span>
                             <div>
-                                طن منقول خلال العام الواحد
+                                طن منقول خلال العام 2022
                             </div>
                         </div>
                     </div>
@@ -349,12 +366,12 @@
                                         class="icofont-check"></i>سرعة الوصول </li>
                                 <li class="wow fadeInUp" data-wow-duration="0" data-wow-delay="0.2s"><i
                                         class="icofont-check"></i>الكفائة والاحترافية </li>
-                                <li class="wow fadeInUp" data-wow-duration="0" data-wow-delay="0.3s"><i
-                                        class="icofont-check"></i>ضمانات بنكية دائمة</li>
+
                                 <li class="wow fadeInUp" data-wow-duration="0" data-wow-delay="0.4s"><i
                                         class="icofont-check"></i>تعامل سهل ومرن</li>
                                 <li class="wow fadeInUp" data-wow-duration="0" data-wow-delay="0.5s"><i
-                                        class="icofont-check"></i>خدمة دعم متميزة</li>
+                                        class="icofont-check"></i>خدمة عملاء متميزة
+                                </li>
                                 <li class="wow fadeInUp" data-wow-duration="0" data-wow-delay="0.6s"><i
                                         class="icofont-check"></i>خبرات متراكمة في مجال النقل </li>
                                 <li class="wow fadeInUp" data-wow-duration="0" data-wow-delay="0.7s"><i
@@ -449,10 +466,9 @@
                     <!-- Questions -->
                     <div class="col-sm-12 col-md-6 wow fadeInUp" data-wow-duration="0" data-wow-delay="0s">
                         <h4 class="h4-md mb-3"> كيف استطيع الحصول على عرض سعر </h4>
-                        <p>يمكنك التواصل معى على نموذج الاتصال الموجود في الصفحة او بلاتصال على الرقم : <a
-                                href="tel:+966 55 005 6677 ">6677 005 55 966+</a> وسيقوم الموضف المسؤول بتزويدك
-                            بالبيانات المطلوبة كما يمكنك ارسال ايميل مباشر على البريد : <a
-                                href="mailto:content@aljeed.com">content@aljeed.com</a></p>
+                        <p> كيف استطيع الحصول على عرض سعر
+                            للتواصل معنا يمكنك ارسال ايميل مباشر على البريد : content@aljeed.com
+                            أو على الواتس أب </p>
                     </div>
                     <!-- Questions -->
 
@@ -625,13 +641,13 @@
                         <a href="#"><i class="icofont-google-plus"></i></a>
                     </div>
                 </div>
-            
+
                 <div class="col-lg-3 col-md-6">
                     <h3 class="footer-heading">فروعنا</h3>
                     <div class="footer-widget-contact">
                         <div class="media mb-3">
                             <i class="icofont-google-map me-3"></i>
-                            <div class="media-body">المكز الرئيسي - الدمام -   خلف محطة الهندي </div>
+                            <div class="media-body">المكز الرئيسي - الدمام - خلف محطة الهندي </div>
                         </div>
                         <div class="media mb-3">
                             <i class="icofont-google-map me-3"></i>
