--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <!-- Heading Main -->
                     <div class="col-sm-12 wow fadeInDown" data-wow-duration="0" data-wow-delay="0s">
                         <h1 class="heading-main">
-                            <span>خدماتنا</span>
+                            <!-- <span>خدماتنا</span> -->
                             مالذي يميز الجيد للنقايات
                         </h1>
                     </div>
@@ -451,67 +451,51 @@
         <!-- Clients End -->
 
         <!-- Frequently Asked Questions Start -->
-        <section class="wide-tb-100 faqs">
+        <!-- <section class="wide-tb-100 faqs">
             <div class="container">
                 <div class="row">
-                    <!-- Heading Main -->
                     <div class="col-sm-12">
                         <h1 class="heading-main">
                             <span>الاسئلة الشائعة </span>
                             اسئلة
                         </h1>
                     </div>
-                    <!-- Heading Main -->
 
-                    <!-- Questions -->
                     <div class="col-sm-12 col-md-6 wow fadeInUp" data-wow-duration="0" data-wow-delay="0s">
                         <h4 class="h4-md mb-3"> كيف استطيع الحصول على عرض سعر </h4>
                         <p> كيف استطيع الحصول على عرض سعر
                             للتواصل معنا يمكنك ارسال ايميل مباشر على البريد : content@aljeed.com
                             أو على الواتس أب </p>
                     </div>
-                    <!-- Questions -->
 
-                    <!-- Questions -->
                     <div class="col-sm-12 col-md-6 wow fadeInUp" data-wow-duration="0" data-wow-delay="0.2s">
                         <h4 class="h4-md mb-3">ماهي الاوراق المطلوبة لتوقيع العقد ؟</h4>
                         <p>صورة من السجل التجاري ساري المفعول , توثيق العقد من الغرفة التجارية</p>
                     </div>
-                    <!-- Questions -->
 
-                    <!-- Questions -->
                     <div class="col-sm-12 col-md-6 wow fadeInUp" data-wow-duration="0" data-wow-delay="0.4s">
                         <h4 class="h4-md mb-3">ماهي مدة العقد التي مكنني الحثول علية ؟ </h4>
                         <p>مدة العقد سنة ويمكننا التجديد لفترة غير محدودة </p>
                     </div>
-                    <!-- Questions -->
-
-                    <!-- Questions -->
                     <div class="col-sm-12 col-md-6 wow fadeInUp" data-wow-duration="0" data-wow-delay="0.6s">
                         <h4 class="h4-md mb-3">كيف استطيع ان اضمن سلامةالشحنة </h4>
                         <p>يقوم مندوبونا بالمتابعة مع السائق اولأ بأول ويقومون بتزويد العميل عن حالة الشحنى متى ما تطلب
                             منهم ذلك </p>
                     </div>
-                    <!-- Questions -->
 
-                    <!-- Questions -->
                     <div class="col-sm-12 col-md-6 wow fadeInUp" data-wow-duration="0" data-wow-delay="0.8s">
                         <h4 class="h4-md mb-3">ماهي الية ارسال الطلبات</h4>
                         <p>لدينا عدة طرق لأستقبال الطلبات كما اننا نراعي الطريقة التي يفضلها العميل </p>
                     </div>
-                    <!-- Questions -->
-
-                    <!-- Questions -->
                     <div class="col-sm-12 col-md-6 wow fadeInUp" data-wow-duration="0" data-wow-delay="0.9s">
                         <h4 class="h4-md mb-3">في حال ما لا سمح الله لم تصل شحنتي للوجه لأي سبب كان فكيف يتم تعويضي؟
                         </h4>
                         <p>نحن نتكفل بقيمة البظاعة كاملتاً في حال لم تصل شحنتك الة وهتها كما ان هذا بند مهم يجري ذكره في
                             بالتفصيل في العقد المتفق على فيما بعد </p>
                     </div>
-                    <!-- Questions -->
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- Frequently Asked Questions End -->
 
         <!-- Callout Start -->
