--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     <div class="col-sm-12 wow fadeInDown" data-wow-duration="0" data-wow-delay="0s">
                         <h1 class="heading-main">
                             <!-- <span>خدماتنا</span> -->
-                            مالذي يميز الجيد للنقايات
+                            مالذي يميز الجيد للنقليات
                         </h1>
                     </div>
                     <!-- Heading Main -->
@@ -583,27 +583,6 @@
     </section>
     <!-- Free Quote End -->
 
-    <!-- Email Subscribe Start -->
-    <!-- <section class="wide-tb-50 pb-0 bg-light-theme footer-subscribe">
-        <div class="container wow fadeInDown" data-wow-duration="0" data-wow-delay="0s">
-            <div class="row">
-                <div class="col-sm-12 d-flex col-md-12 col-lg-6 offset-lg-3">
-                    <div class="d- align-items-center d-sm-inline-flex  w-100">
-                        <div class="head">
-                            <span class="d-block">SUBSCRIBE For</span> NEWSLETTER
-                        </div>
-                        <form class="flex-nowrap col ms-3">
-                            <input type="text" class="form-control" placeholder="Enter order number">
-                            <button type="submit" class="btn btn-theme bg-navy-blue">Check Now <i
-                                    class="icofont-envelope"></i></button>
-                        </form>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </section> -->
-    <!-- Email Subscribe End -->
 
     <!-- Main Footer Start -->
     <footer class="wide-tb-70 bg-light-theme pb-0">
@@ -619,10 +598,9 @@
 
                     <h3 class="footer-heading">We're Social</h3>
                     <div class="social-icons">
-                        <a href="#"><i class="icofont-facebook"></i></a>
-                        <a href="#"><i class="icofont-twitter"></i></a>
-                        <a href="#"><i class="icofont-whatsapp"></i></a>
-                        <a href="#"><i class="icofont-google-plus"></i></a>
+                        <a href="https://twitter.com/aljeedest"><i class="icofont-facebook"></i></a>
+                        <a href="https://twitter.com/aljeedest"><i class="icofont-twitter"></i></a>
+                        <a href="https://wa.me/966550056677"><i class="icofont-whatsapp"></i></a>
                     </div>
                 </div>
 
@@ -709,131 +687,9 @@
         </div><!-- /close-video -->
     </div><!-- /video-box -->
 
-    <!-- Search Popup Start -->
-    <div class="overlay overlay-hugeinc">
-        <form class="form-inline mt-2 mt-md-0">
-            <div class="form-inner">
-                <div class="form-inner-div d-inline-flex align-items-center no-gutters">
-                    <div class="col-auto">
-                        <i class="icofont-search"></i>
-                    </div>
-                    <div class="col">
-                        <input class="form-control w-100 p-0" type="text" placeholder="Search" aria-label="Search">
-                    </div>
-                    <div class="col-auto">
-                        <a href="#" class="overlay-close link-oragne"><i class="icofont-close-line"></i></a>
-                    </div>
-                </div>
-            </div>
-        </form>
-    </div>
-    <!-- Search Popup End -->
-
-    <!-- Request Modal -->
-    <div class="modal fade" id="request_popup" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered request_popup modal-xl modal-dialog-scrollable" role="document">
-            <div class="modal-content">
-                <div class="modal-body p-0">
-                    <!-- Contact Details Start -->
-                    <section class="pos-rel bg-light-gray">
-                        <div class="container-fluid p-0">
-                            <a href="#" class="close" data-bs-dismiss="modal" aria-label="Close">
-                                <i class="icofont-close-line"></i>
-                            </a>
-                            <div class="d-lg-flex justify-content-end no-gutters mb-spacer-md">
-                                <div class="col bg-fixed bg-img-7 request_pag_img">
-                                    &nbsp;
-                                </div>
 
 
-                                <div class="col-lg-7 col-12">
-                                    <div class="form-content">
-                                        <h2 class="h2-xl mb-4 fw-6 txt-orange">Request A Quote</h2>
-                                        <form action="#" method="post" novalidate="novalidate" class="rounded-field">
 
-                                            <div class="row g-3 mb-4">
-                                                <div class="col-md">
-                                                    <select title="Please choose a package" required="" name="package"
-                                                        class="form-control wide" aria-required="true"
-                                                        aria-invalid="false">
-                                                        <option value="">Freight Type</option>
-                                                        <option value="Type 1">Type 1</option>
-                                                        <option value="Type 2">Type 2</option>
-                                                        <option value="Type 3">Type 3</option>
-                                                        <option value="Type 4">Type 4</option>
-                                                    </select>
-                                                </div>
-                                                <div class="col-md">
-                                                    <select title="Please choose a package" required="" name="package"
-                                                        class="form-control wide" aria-required="true"
-                                                        aria-invalid="false">
-                                                        <option value="">Incoterms</option>
-                                                        <option value="Type 1">Type 1</option>
-                                                        <option value="Type 2">Type 2</option>
-                                                        <option value="Type 3">Type 3</option>
-                                                        <option value="Type 4">Type 4</option>
-                                                    </select>
-                                                </div>
-                                            </div>
-                                            <div class="row g-3 mb-4">
-                                                <div class="col-md">
-                                                    <input type="text" name="name" class="form-control"
-                                                        placeholder="City of departure">
-                                                </div>
-                                                <div class="col-md">
-                                                    <input type="text" name="email" class="form-control"
-                                                        placeholder="Delivery city">
-                                                </div>
-                                            </div>
-                                            <div class="row g-3 mb-4">
-                                                <div class="col-md">
-                                                    <input type="text" name="name" class="form-control"
-                                                        placeholder="Total gross weight (KG)">
-                                                </div>
-                                                <div class="col-md">
-                                                    <input type="text" name="email" class="form-control"
-                                                        placeholder="Dimension">
-                                                </div>
-                                            </div>
-
-                                            <div class="form-row">
-                                                <div class="col-md">
-                                                    <div class="center-head"><span class="bg-light-gray txt-orange">Your
-                                                            Personal Details</span></div>
-                                                </div>
-                                            </div>
-                                            <div class="row g-3 mb-4">
-                                                <div class="col-md">
-                                                    <input type="text" name="name" class="form-control mb-3"
-                                                        placeholder="Your Name">
-                                                    <input type="text" name="name" class="form-control mb-3"
-                                                        placeholder="Email">
-                                                    <input type="text" name="name" class="form-control"
-                                                        placeholder="Phone Number">
-                                                </div>
-                                                <div class="col-md">
-                                                    <textarea rows="7" placeholder="Message"
-                                                        class="form-control"></textarea>
-                                                </div>
-                                            </div>
-                                            <div class="form-row">
-                                                <div class="col pt-3">
-                                                    <button type="submit" class="form-btn btn-theme bg-orange">Send
-                                                        Message <i class="icofont-rounded-left"></i></button>
-                                                </div>
-                                            </div>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </section>
-                    <!-- Contact Details End -->
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Request Modal -->
 
     <!-- Back To Top Start -->
     <a id="mkdf-back-to-top" href="#" class="off"><i class="icofont-rounded-up"></i></a>
