add English template

--- a/index.html
+++ b/index.html
@@ -26,11 +26,6 @@
     <!-- Responsive Theme CSS -->
     <link href="assets/css/responsive-rtl.css" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
 
 <body>
@@ -50,12 +45,9 @@
         <div class="top-bar d-flex align-items-center text-md-left">
             <div class="container">
                 <div class="row align-items-center">
-
                     <div class="col-md-auto">
-
                         <span class="me-3"><i class="icofont-ui-touch-phone"></i><a href="tel:+966550056677"></a>+966 55
                             005 6677</span>
-
                         <span class="me-3"><i class="icofont-ui-email"></i> content@aljeed.com</span>
                         <!-- Topbar Language Dropdown Start -->
                         <div class="dropdown d-inline-flex lang-toggle mx-2">
@@ -65,8 +57,7 @@
                                 <span class="d-none d-lg-inline-block">عربي</span> <i class="icofont-rounded-down"></i>
                             </a>
                             <div class="dropdown-menu dropdownhover-bottom dropdown-menu-end" role="menu">
-                                <a class="dropdown-item active" href="#">عربي</a>
-                                <a class="dropdown-item" href="#">English</a>
+                                <a class="dropdown-item" href="/index-en.html"><img src="assets/images/us.svg" alt="" class="dropdown-item-icon"> English</a>
                             </div>
                         </div>
                         <!-- Topbar Language Dropdown End -->
@@ -93,24 +84,31 @@
                 </div>
                 <!-- Topbar Request Quote End -->
 
+
+
+
                 <div class="collapse navbar-collapse t" id="navbarCollapse">
                     <ul class="navbar-nav ms-auto mb-2 mb-md-0">
                         <li class="nav-item ">
                             <a class="nav-link" href="#" aria-expanded="false">الرئيسية <i
                                     class="icofont-rounded"></i></a>
                         </li>
+
                         <li class="nav-item ">
-                            <a class="nav-link scrollto" href="#whous" aria-expanded="false"> من نحن<i
+                            <a class="nav-link scrollto" href="#AboutUs" aria-expanded="false"> من نحن<i
                                     class="icofont-rounded"></i></a>
                         </li>
+
                         <li class="nav-item ">
                             <a class="nav-link" href="#whyaljeed" aria-expanded="false">لماذا الجيد <i
                                     class="icofont-rounded"></i></a>
                         </li>
+
                         <li class="nav-item ">
                             <a class="nav-link" href="#ourservice" aria-expanded="false"> خدماتنا <i
                                     class="icofont-rounded"></i></a>
                         </li>
+
                         <li class="nav-item ">
                             <a class="nav-link" href="#contact" aria-expanded="false">تواصل معنا <i
                                     class="icofont-rounded"></i></a>
@@ -141,7 +139,7 @@
     <main id="body-content">
 
         <!-- What Makes Us Special Start -->
-        <section id="whous" class="wide-tb-80">
+        <section id="AboutUs"  class="wide-tb-80">
             <div class="container pos-rel">
                 <div class="row align-items-center">
 
@@ -450,54 +448,6 @@
         </section>
         <!-- Clients End -->
 
-        <!-- Frequently Asked Questions Start -->
-        <!-- <section class="wide-tb-100 faqs">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-12">
-                        <h1 class="heading-main">
-                            <span>الاسئلة الشائعة </span>
-                            اسئلة
-                        </h1>
-                    </div>
-
-                    <div class="col-sm-12 col-md-6 wow fadeInUp" data-wow-duration="0" data-wow-delay="0s">
-                        <h4 class="h4-md mb-3"> كيف استطيع الحصول على عرض سعر </h4>
-                        <p> كيف استطيع الحصول على عرض سعر
-                            للتواصل معنا يمكنك ارسال ايميل مباشر على البريد : content@aljeed.com
-                            أو على الواتس أب </p>
-                    </div>
-
-                    <div class="col-sm-12 col-md-6 wow fadeInUp" data-wow-duration="0" data-wow-delay="0.2s">
-                        <h4 class="h4-md mb-3">ماهي الاوراق المطلوبة لتوقيع العقد ؟</h4>
-                        <p>صورة من السجل التجاري ساري المفعول , توثيق العقد من الغرفة التجارية</p>
-                    </div>
-
-                    <div class="col-sm-12 col-md-6 wow fadeInUp" data-wow-duration="0" data-wow-delay="0.4s">
-                        <h4 class="h4-md mb-3">ماهي مدة العقد التي مكنني الحثول علية ؟ </h4>
-                        <p>مدة العقد سنة ويمكننا التجديد لفترة غير محدودة </p>
-                    </div>
-                    <div class="col-sm-12 col-md-6 wow fadeInUp" data-wow-duration="0" data-wow-delay="0.6s">
-                        <h4 class="h4-md mb-3">كيف استطيع ان اضمن سلامةالشحنة </h4>
-                        <p>يقوم مندوبونا بالمتابعة مع السائق اولأ بأول ويقومون بتزويد العميل عن حالة الشحنى متى ما تطلب
-                            منهم ذلك </p>
-                    </div>
-
-                    <div class="col-sm-12 col-md-6 wow fadeInUp" data-wow-duration="0" data-wow-delay="0.8s">
-                        <h4 class="h4-md mb-3">ماهي الية ارسال الطلبات</h4>
-                        <p>لدينا عدة طرق لأستقبال الطلبات كما اننا نراعي الطريقة التي يفضلها العميل </p>
-                    </div>
-                    <div class="col-sm-12 col-md-6 wow fadeInUp" data-wow-duration="0" data-wow-delay="0.9s">
-                        <h4 class="h4-md mb-3">في حال ما لا سمح الله لم تصل شحنتي للوجه لأي سبب كان فكيف يتم تعويضي؟
-                        </h4>
-                        <p>نحن نتكفل بقيمة البظاعة كاملتاً في حال لم تصل شحنتك الة وهتها كما ان هذا بند مهم يجري ذكره في
-                            بالتفصيل في العقد المتفق على فيما بعد </p>
-                    </div>
-                </div>
-            </div>
-        </section> -->
-        <!-- Frequently Asked Questions End -->
-
         <!-- Callout Start -->
         <section id="contact" class="wide-tb-80 bg-scroll bg-img-6 pos-rel callout-style-1">
             <div class="bg-overlay blue opacity-60"></div>
@@ -521,6 +471,8 @@
         </section>
         <!-- Callout End -->
     </main>
+
+
     <!-- Free Quote Start -->
     <section class="bg-white wide-tb-100 mb-spacer-md">
         <div class="container">
@@ -566,7 +518,7 @@
                         </div>
                         <div class="row g-4 mb-4">
                             <div class="col">
-                                <textarea rows="7" placeholder=" الاستفسار او اي سؤوال اخر  "
+                                <textarea rows="7" placeholder=" الاستفسار او اي سؤال اخر  "
                                     class="form-control"></textarea>
                             </div>
                         </div>
@@ -604,7 +556,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-3 col-md-6 my-5">
                     <h3 class="footer-heading">فروعنا</h3>
                     <div class="footer-widget-contact">
                         <div class="media mb-3">
@@ -641,42 +593,11 @@
                         </div>
                     </div>
                 </div>
-                <!-- Column Third -->
-
-                <!-- Column Fourth -->
-                <!-- <div class="col-lg-3 col-md-6">
-                    <h3 class="footer-heading">التغريدات الأخيرة</h3>
-                    <div class="footer-widget-tweet">
-                        <div class="d-flex align-items-start">
-                            <i class="icofont-twitter txt-ligt-gray icofont-2x"></i>
-                            <div class="tweet-stream"></div>
-                        </div>
-
-                        <div>
-                            <a href="#" class="btn-theme icon-left"><i class="icofont-twitter"></i> Follow @twitter</a>
-                        </div>
-                    </div>
-                </div> -->
-                <!-- Column Fourth -->
-
-
+               
 
             </div>
         </div>
 
-        <!-- <div class="copyright-wrap bg-navy-blue wide-tb-30">
-            <div class="container">
-                <div class="row text-md-start text-center">
-                    <div class="col-sm-12 col-md-6 copyright-links">
-                        <a href="#">Privacy Policy</a> <span>|</span> <a href="#">Contact</a> <span>|</span> <a
-                            href="#">Faq's</a>
-                    </div>
-                    <div class="col-sm-12 col-md-6 text-md-end text-center">
-                        Designed by <a href="#" rel="nofollow">MannatStudio</a> © 2021 All Rights Reserved
-                    </div>
-                </div>
-            </div>
-        </div> -->
     </footer>
     <!-- Main Footer End -->
 
@@ -686,8 +607,6 @@
             <i class="icofont-close-line"></i>
         </div><!-- /close-video -->
     </div><!-- /video-box -->
-
-
 
 
 
