--- a/index-en.html
+++ b/index-en.html
@@ -546,7 +546,7 @@
 
                 <!-- Column Third -->
                 <div class="col-lg-3 col-md-6 my-5">
-                    <h3 class="footer-heading">فروعنا</h3>
+                    <h3 class="footer-heading">Our Branches</h3>
                     <div class="footer-widget-contact">
                         <div class="media mb-3">
                             <i class="icofont-google-map me-3"></i>
